[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-sonarqube-api"
version = "2.1.0"
authors = [
    "Jialiang Shi <kevin09254930sjl@gmail.com>"
]
license="AGPL"
readme = "README.rst"
repository = "https://github.com/texhnolyze/python-sonarqube-api"
description = "Python wrapper for the SonarQube and SonarCloud API."
keywords = ["api", "sonarqube", "sonar", "client", "wrapper", "sonarcloud"]
classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Environment :: Plugins",
   "Intended Audience :: Developers",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Topic :: Software Development",
]
packages = [
    { include = "sonarqube" },
]

[tool.poetry.dependencies]
python = ">=3.7.0"
requests = "^2.31.0"
